--- a/index2.html
+++ b/index2.html
@@ -8,6 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
 </head>
 <body>
+    <header>
+        <h1 class="title">Enric Galera</h1>
+        <hr/>
+    </header>
     <h1>Webpage Coming Soon</h1>
     <h2>Setting up the timer</h2>
 </body>
