--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1 class="title">Enric Galera</h1>
+        <h2 class="subtitle">Contact: enricgalerarotger@gmail.com</h2>
         <hr/>
     </header>
     <h1>Webpage Coming Soon</h1>
