Implement navigation bar in index2.html and update styles in style.css and style.scss

--- a/index2.html
+++ b/index2.html
@@ -9,11 +9,38 @@
 </head>
 <body>
     <header>
-        <h1 class="title">Enric Galera</h1>
-        <h2 class="subtitle">Contact: enricgalerarotger@gmail.com</h2>
-        <hr/>
+        <nav id="firstNav">
+            <div class="logo">
+                <a href="./index.html" target="_self"><img src="./logo.svg" alt="logo"
+                        width="50px" height="50px" class="logotip"></a>
+                <!-- ESTILS DEL LOGOTIP -->
+            </div>
+            <div class="links">
+                <a href="./index.html" target="_self">Inici</a>
+                <a href="./blog.html">Blog</a>
+                <a href="#contact" target="_self">Contacte</a>
+                <div id="courses">
+                    <button href="#courses">Cursos <i class="fa-solid fa-chevron-down" id="icon"></i></button>
+                </div>
+            </div>
+            <div class="login">
+                <a href="#login">LOGIN</a>
+                <i class="fa-regular fa-circle-user"></i>
+            </div>
+        </nav>
     </header>
-    <h1>Webpage Coming Soon</h1>
-    <h2>Setting up the timer</h2>
 </body>
 </html>
+
+<!-- <div class="logo">
+            <img src="logo.svg" alt="Logo">
+        </div>
+        <div class="text">
+            <h1 class="title">Enric Galera</h1>
+            <h2 class="subtitle">Contact: enricgalerarotger@gmail.com</h2>
+        </div>
+        <hr width="100%">
+    </header>
+    <div class="break"></div>
+    <h1>Webpage Coming Soon</h1>
+    <h2>Setting up the timer</h2>-->
