--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enric Galera - Building website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="../root/downloading-logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./logo.svg" type="image/x-icon">
     <link
         href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"
         rel="stylesheet" />
@@ -26,7 +26,7 @@
             <h1>Website is under construction!!!</h1>
         </div>
         <div class="image">
-            <img src="img-building-webpage.png" alt="simbol_construint_pàgina" width="30%" height="30%">
+            <img src="img-building-webpage.png" alt="building_page_image" width="30%" height="30%">
         </div>
         <div class="description">
             <p>Sorry, I'm building my webpage yet. You can check how am I doing <a href="./index2.html">here</a>.<br/></p>
