--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
         </div>
         <div class="description">
             <p>Sorry, I'm building my webpage yet. You can check how am I doing <a href="./index2.html">here</a>.<br/></p>
+            <br/><br/>
+            <p>And you can find some useful links to my prjects below:</p>
+            <br/>
+            <ul>
+                <li><a href="/enterprise-webpage/index.html">Enterprise Webpage Template</a></li>
+                <li><a href="/simple-color-picker/colorpicker.html">Color Picker</a></li>
+            </ul>
         </div>
         <div class="foot">
             <em>Thanks for checking my project out :&#41;</em>
