--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <ul>
                 <li><a href="/enterprise-webpage/index.html">Enterprise Webpage Template</a></li>
                 <li><a href="/simple-color-picker/colorpicker.html">Color Picker</a></li>
+                <li><a href="/decibel-controller/index.html">Decibel Controller</a></li>
             </ul>
         </div>
         <div class="foot">
