--- a/index2.html
+++ b/index2.html
@@ -3,58 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./logo.svg" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
+    <title>E9cipher</title>
 </head>
 <body>
-    <header>
-        <nav id="firstNav">
-            <div class="logo">
-                <a href="./index.html" target="_self"><img src="./logo.svg" alt="logo"
-                        width="50px" height="50px" class="logotip"></a>
-                <!-- ESTILS DEL LOGOTIP -->
-            </div>
-            <div class="links">
-                <a href="./index.html" target="_self">Home</a>
-                <a href="./blog.html">Blog</a>
-                <a href="#contact" target="_self">Contact</a>
-                <!-- <div id="courses">
-                    <button href="#courses">Cursos <i class="fa-solid fa-chevron-down" id="icon"></i></button>
-                </div> -->
-            </div>
-            <!-- <div class="login">
-                <a href="#login">LOGIN</a>
-                <i class="fa-regular fa-circle-user"></i>
-            </div> -->
-        </nav>
-    </header>
-    <main>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos tempore delectus consectetur aliquam cupiditate ipsa praesentium repellat eaque dicta, veniam aut. Est exercitationem expedita delectus quas ratione cum totam! Ullam.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam cumque ipsa nisi vero voluptate? Ipsum esse in nam! Culpa aspernatur fugit vero explicabo alias impedit sit id quia ad doloremque.
-        Numquam natus reprehenderit, nisi quae ex in mollitia vel culpa sequi adipisci dolorem enim alias inventore. Vel quo architecto dolore nulla minus esse. Id excepturi, eos eaque maxime blanditiis culpa.
-        Animi nam esse libero, modi, minus ipsam voluptate deserunt blanditiis ut quos excepturi facilis maiores numquam enim ullam corporis inventore doloremque aspernatur soluta, cupiditate dolore explicabo. Nulla vel quos vero.
-        Omnis voluptates nulla laboriosam, ex veniam, ipsa optio odit consectetur sint neque eveniet odio ducimus! Minus non eum harum similique amet possimus quidem, vel perspiciatis deserunt in ea nemo eveniet!
-        Distinctio aperiam rem vero ratione sunt dolore quia molestias ad exercitationem hic harum fuga dignissimos corporis quis, nobis magni beatae quisquam debitis! Cum nostrum obcaecati porro a fuga tenetur sint!
-        Dolorem maxime, eligendi repudiandae a mollitia deleniti eveniet animi porro nostrum vero unde minima optio. Incidunt aut quis earum odio at dolores? Tempora iusto autem cupiditate. Voluptatibus debitis praesentium similique?
-        Possimus magnam officia ex quia quod modi ipsam expedita laboriosam? Laudantium, quas suscipit dignissimos dolorum maiores nemo? Nam magni laborum, quidem adipisci rerum porro dolores optio cum! Rem, consectetur eveniet!
-        Ipsum unde suscipit dolor esse earum natus alias corrupti et nam, minus fugit, eum ut sequi laboriosam quaerat similique corporis explicabo hic voluptate ipsa magnam consectetur repellendus culpa fugiat! Fugiat?
-        In at alias, vero fugiat autem ipsa incidunt odio, perspiciatis earum natus architecto illo excepturi. Numquam commodi fuga iure aut, impedit in, voluptatibus doloremque porro tempore aliquam provident libero. Cumque?
-        Labore ad exercitationem reprehenderit facilis error voluptatibus voluptatem iste odio. Animi porro reprehenderit laboriosam nam eveniet nulla maiores eos laudantium ab explicabo, ipsa nostrum magnam, molestias optio assumenda id eaque!
-    </main>
+    
 </body>
 </html>
-
-<!-- <div class="logo">
-            <img src="logo.svg" alt="Logo">
-        </div>
-        <div class="text">
-            <h1 class="title">Enric Galera</h1>
-            <h2 class="subtitle">Contact: enricgalerarotger@gmail.com</h2>
-        </div>
-        <hr width="100%">
-    </header>
-    <div class="break"></div>
-    <h1>Webpage Coming Soon</h1>
-    <h2>Setting up the timer</h2>-->
